--- a/_sizes.scss
+++ b/_sizes.scss
@@ -2,8 +2,12 @@
 // Please have in mind that it is extremely easy to create your own button sizes.
 
 @mixin bbb_size ($size: 1) {
-  $multiplier: $size;
-  $padding_y: golden-ratio(7px, $multiplier);
+
+  @if (unitless($size)) {
+    $padding_y: $size * 7px;
+  } @else {
+    $padding_y: $size;
+  }
   $padding_x: golden-ratio($padding_y, 1);
   padding: $padding_y $padding_x;
 }
