Minor change to sizes

--- a/_sizes.scss
+++ b/_sizes.scss
@@ -3,11 +3,13 @@
 
 @mixin bbb_size ($size: 1) {
 
+  $padding_y: 0;
+
   @if (unitless($size)) {
     $padding_y: $size * 7px;
   } @else {
     $padding_y: $size;
   }
-  $padding_x: golden-ratio($padding_y, 1);
+  $padding_x: $padding_y * 2;
   padding: $padding_y $padding_x;
 }
